[tool.poetry]
name = "Backend"
version = "0.1.0"
description = ""
authors = ["Daria Veselkova <daria.veselkova@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"
SQLAlchemy = "^1.4.28"

[tool.poetry.dev-dependencies]
mypy = "^0.920"
wemake-python-styleguide = "^0.16.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
